// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AMP Home Page A11y I can see the skip to content link 1`] = `"إذهب الى المحتوى"`;

exports[`AMP Home Page AMP Consent config 1`] = `
{
  "consents": {
    "user-consent": {
      "promptIfUnknownForGeoGroup": "eea",
      "promptUI": "consent-prompt",
    },
  },
  "policy": {
    "default": {
      "timeout": {
        "fallbackAction": "reject",
        "seconds": 0,
      },
      "waitFor": {
        "user-consent": [],
      },
    },
  },
}
`;

exports[`AMP Home Page AMP Geo config 1`] = `
{
  "AmpBind": true,
  "ISOCountryGroups": {
    "eea": [
      "at",
      "ax",
      "be",
      "bg",
      "bl",
      "cy",
      "cz",
      "de",
      "dk",
      "ea",
      "ee",
      "es",
      "fi",
      "fr",
      "gb",
      "gf",
      "gg",
      "gi",
      "gp",
      "gr",
      "hr",
      "hu",
      "ic",
      "ie",
      "im",
      "is",
      "it",
      "je",
      "li",
      "lt",
      "lu",
      "lv",
      "mf",
      "mq",
      "mt",
      "nc",
      "nl",
      "no",
      "pf",
      "pl",
      "pm",
      "pt",
      "re",
      "ro",
      "se",
      "si",
      "sj",
      "sk",
      "tf",
      "va",
      "wf",
      "yt",
    ],
    "gbOrUnknown": [
      "gb",
      "gg",
      "im",
      "je",
      "uk",
      "unknown",
    ],
  },
}
`;

exports[`AMP Home Page Ads should have the following properties 1`] = `
<amp-ad
  data-a4a-upgrade-type="amp-ad-network-doubleclick-impl"
  data-amp-slot-index="0"
  data-block-on-consent="default"
  data-multi-size="320x50,300x50"
  data-multi-size-validation="false"
  data-npa-on-unknown-consent="true"
  data-slot="/4817/bbccom.test.site.amp.news"
  height="50"
  json="{"targeting":{"slot":"leaderboard","asset_type":"index","channel":"arabic"}}"
  media="(max-width: 62.9375rem)"
  type="doubleclick"
  width="320"
/>
`;

exports[`AMP Home Page Ads should have the following properties 2`] = `
<amp-ad
  data-a4a-upgrade-type="amp-ad-network-doubleclick-impl"
  data-amp-slot-index="0"
  data-block-on-consent="default"
  data-multi-size="970x250,728x90"
  data-multi-size-validation="false"
  data-npa-on-unknown-consent="true"
  data-slot="/4817/bbccom.test.site.amp.news"
  height="250"
  json="{"targeting":{"slot":"leaderboard","asset_type":"index","channel":"arabic"}}"
  media="(min-width: 63rem)"
  type="doubleclick"
  width="970"
/>
`;

exports[`AMP Home Page Ads should have the following properties 3`] = `
<amp-ad
  data-a4a-upgrade-type="amp-ad-network-doubleclick-impl"
  data-amp-slot-index="0"
  data-block-on-consent="default"
  data-multi-size="300x250"
  data-multi-size-validation="false"
  data-npa-on-unknown-consent="true"
  data-slot="/4817/bbccom.test.site.amp.news"
  height="250"
  json="{"targeting":{"slot":"mpu","asset_type":"index","channel":"arabic"}}"
  type="doubleclick"
  width="300"
/>
`;

exports[`AMP Home Page Analytics ATI 1`] = `
{
  "requests": {
    "base": "https://logws1363.ati-host.net?",
    "pageview": "\${base}s=598343&s2=5&p=arabic.page&r=\${screenWidth}x\${screenHeight}x\${screenColorDepth}&re=\${availableScreenWidth}x\${availableScreenHeight}&hl=\${timestamp}&lng=\${browserLanguage}&x1=[urn%3Abbc%3Atipo%3Atopic%3Acq01ke64p2et]&x2=[amp]&x3=[news-arabic]&x4=[ar]&x5=[\${sourceUrl}]&x6=[\${documentReferrer}]&x7=[index-home]&x8=[simorgh]&x9=[BBC%2520News%2520%D8%B9%D8%B1%D8%A8%D9%8A]&ref=\${documentReferrer}",
  },
  "transport": {
    "beacon": false,
    "image": true,
    "xhrpost": false,
  },
  "triggers": {
    "trackPageview": {
      "on": "visible",
      "request": "pageview",
    },
  },
}
`;

exports[`AMP Home Page Analytics chartbeat 1`] = `
{
  "vars": {
    "contentType": "home",
    "domain": "test.bbc.co.uk",
    "sections": "Arabic, Arabic - home",
    "title": "BBC News عربي",
    "uid": 50924,
    "virtualReferrer": "\${documentReferrer}",
  },
}
`;

exports[`AMP Home Page Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, عربي",
  "url": "/arabic",
}
`;

exports[`AMP Home Page Footer Anchors should match text and url 2`] = `
{
  "text": "لماذا يمكنك الاعتماد على أخبار بي بي سي",
  "url": "https://www.bbc.com/arabic/institutional-49283069",
}
`;

exports[`AMP Home Page Footer Anchors should match text and url 3`] = `
{
  "text": "شروط الاستخدام",
  "url": "https://www.bbc.com/arabic/institutional-37731351",
}
`;

exports[`AMP Home Page Footer Anchors should match text and url 4`] = `
{
  "text": "عن بي بي سي",
  "url": "https://www.bbc.com/arabic/institutional-37731352",
}
`;

exports[`AMP Home Page Footer Anchors should match text and url 5`] = `
{
  "text": "سياسة الخصوصية",
  "url": "https://www.bbc.com/arabic/institutional-37731353",
}
`;

exports[`AMP Home Page Footer Anchors should match text and url 6`] = `
{
  "text": "ملفات الارتباط Cookies",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`AMP Home Page Footer Anchors should match text and url 7`] = `
{
  "text": "اتصل بـ بي بي سي",
  "url": "https://www.bbc.co.uk/arabic/send/u50853203",
}
`;

exports[`AMP Home Page Footer Anchors should match text and url 8`] = `
{
  "text": "سياستنا بخصوص الروابط الخارجية.",
  "url": "https://www.bbc.co.uk/editorialguidelines/guidance/feeds-and-links",
}
`;

exports[`AMP Home Page Footer Cookie Settings Button should match text and on handler 1`] = `
{
  "on": "tap:consent.prompt, privacy.hide, cookie.show, AMP.setState({ isManagingSettings: true })",
  "text": "Do not share or sell my info",
}
`;

exports[`AMP Home Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/arabic"`;

exports[`AMP Home Page Footer I can see the footer copyright and external linking text 1`] = `"© 2024 بي بي سي. بي بي سي ليست مسؤولة عن محتوى المواقع الخارجية. سياستنا بخصوص الروابط الخارجية."`;

exports[`AMP Home Page Header I can see the branding 1`] = `"BBC News, عربي"`;

exports[`AMP Home Page Header Navigation link should match text and url 1`] = `
{
  "text": "الصفحة الحالية, رئيسية",
  "url": "/arabic",
}
`;

exports[`AMP Home Page Header Navigation link should match text and url 2`] = `
{
  "text": "شرق أوسط",
  "url": "/arabic/topics/ckdxnj6g4znt",
}
`;

exports[`AMP Home Page Header Navigation link should match text and url 3`] = `
{
  "text": "عالم",
  "url": "/arabic/topics/c719d2el19nt",
}
`;

exports[`AMP Home Page Header Navigation link should match text and url 4`] = `
{
  "text": "علوم وتكنولوجيا",
  "url": "/arabic/topics/c719d2ely7xt",
}
`;

exports[`AMP Home Page Header Navigation link should match text and url 5`] = `
{
  "text": "صحة",
  "url": "/arabic/topics/c95y3q70znjt",
}
`;

exports[`AMP Home Page Header Navigation link should match text and url 6`] = `
{
  "text": "فيديو",
  "url": "/arabic/media-54706728",
}
`;

exports[`AMP Home Page Header Navigation link should match text and url 7`] = `
{
  "text": "صحافة",
  "url": "/arabic/topics/c08gmd9rp97t",
}
`;

exports[`AMP Home Page Header Navigation link should match text and url 8`] = `
{
  "text": "ترند",
  "url": "/arabic/topics/c404vr23x4dt",
}
`;

exports[`AMP Home Page Header Navigation link should match text and url 9`] = `
{
  "text": "تحقيقات",
  "url": "/arabic/tv-and-radio-42414864",
}
`;

exports[`AMP Home Page Header Navigation link should match text and url 10`] = `
{
  "text": "بودكاست",
  "url": "/arabic/tv-and-radio-52067221",
}
`;

exports[`AMP Home Page Header Navigation link should match text and url 11`] = `
{
  "text": "برامجنا",
  "url": "/arabic/tv-and-radio-37728883",
}
`;

exports[`AMP Home Page Main heading should match text 1`] = `"BBC News, عربي - الرئيسية"`;

exports[`AMP Home Page Page content First item in the first curation is the correct headline 1`] = `"مباشر , الجمعية العامة للأمم المتحدة تعتمد بأغلبية ساحقة قرارا يطالب بوقف فوري إنساني لإطلاق النار في غزة"`;

exports[`AMP Home Page SEO Apple Touch Icon should match attributes 1`] = `
{
  "sizes": null,
  "url": "http://localhost:7080/arabic/images/icons/icon-192x192.png",
}
`;

exports[`AMP Home Page SEO Apple Touch Icon should match attributes 2`] = `
{
  "sizes": "72x72",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/arabic/images/icons/icon-72x72.png",
}
`;

exports[`AMP Home Page SEO Apple Touch Icon should match attributes 3`] = `
{
  "sizes": "96x96",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/arabic/images/icons/icon-96x96.png",
}
`;

exports[`AMP Home Page SEO Apple Touch Icon should match attributes 4`] = `
{
  "sizes": "128x128",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/arabic/images/icons/icon-128x128.png",
}
`;

exports[`AMP Home Page SEO Apple Touch Icon should match attributes 5`] = `
{
  "sizes": "144x144",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/arabic/images/icons/icon-144x144.png",
}
`;

exports[`AMP Home Page SEO Apple Touch Icon should match attributes 6`] = `
{
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/arabic/images/icons/icon-152x152.png",
}
`;

exports[`AMP Home Page SEO Apple Touch Icon should match attributes 7`] = `
{
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/arabic/images/icons/icon-180x180.png",
}
`;

exports[`AMP Home Page SEO Apple Touch Icon should match attributes 8`] = `
{
  "sizes": "192x192",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/arabic/images/icons/icon-192x192.png",
}
`;

exports[`AMP Home Page SEO Apple Touch Icon should match attributes 9`] = `
{
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/arabic/images/icons/icon-384x384.png",
}
`;

exports[`AMP Home Page SEO Apple Touch Icon should match attributes 10`] = `
{
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/arabic/images/icons/icon-512x512.png",
}
`;

exports[`AMP Home Page SEO Canonical link 1`] = `"http://localhost:7080/arabic"`;

exports[`AMP Home Page SEO Dir attribute 1`] = `"rtl"`;

exports[`AMP Home Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`AMP Home Page SEO Heading level 1 1`] = `"BBC News, عربي - الرئيسية"`;

exports[`AMP Home Page SEO Lang attribute 1`] = `"ar"`;

exports[`AMP Home Page SEO Linked data should match text 1`] = `
{
  "@context": "http://schema.org",
  "@graph": [
    {
      "@type": "CollectionPage",
      "headline": "BBC News عربي",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://news.files.bbci.co.uk/ws/img/logos/og/arabic.png",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "ar",
        "name": "Arabic",
      },
      "mainEntityOfPage": {
        "@id": "http://localhost:7080/arabic",
        "@type": "WebPage",
        "name": "BBC News عربي",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/arabic.png",
          "width": 1024,
        },
        "name": "BBC News عربي",
        "publishingPrinciples": "https://www.bbc.com/arabic/institutional-49283069",
      },
      "thumbnailUrl": "https://news.files.bbci.co.uk/ws/img/logos/og/arabic.png",
      "url": "http://localhost:7080/arabic",
    },
    {
      "@type": "ItemList",
      "itemListElement": [
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 1,
          "url": "https://www.bbc.com/arabic/live/67688656",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 2,
          "url": "https://www.bbc.com/arabic/articles/cg6p4p0k6x7o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 3,
          "url": "https://www.bbc.com/arabic/articles/c51ey2z5z8lo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 4,
          "url": "https://www.bbc.com/arabic/articles/cd1pr4lzrx8o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 5,
          "url": "https://www.bbc.com/arabic/articles/cz92x7kvwl7o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 6,
          "url": "https://www.bbc.com/arabic/articles/cmlp2gdk1rzo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 7,
          "url": "https://www.bbc.com/arabic/articles/cp9pvjyp4xzo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 8,
          "url": "https://www.bbc.com/arabic/articles/c2e24qg8n7no",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 9,
          "url": "https://www.bbc.com/arabic/articles/cxx1xy5kkwwo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 10,
          "url": "https://www.bbc.com/arabic/articles/ckkpgvk1ndno",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 11,
          "url": "https://www.bbc.com/arabic/articles/cd1p792prw0o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 12,
          "url": "https://www.bbc.com/arabic/articles/c7249d43rzeo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 13,
          "url": "https://www.bbc.com/arabic/articles/cd1p1g81jyno",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 14,
          "url": "https://www.bbc.com/arabic/articles/cgrpple58rzo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 15,
          "url": "https://www.bbc.com/arabic/articles/c252lj5g1p7o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 16,
          "url": "https://www.bbc.com/arabic/articles/c7249wereljo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 17,
          "url": "https://www.bbc.com/arabic/articles/c252re35n5no",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 18,
          "url": "https://www.bbc.com/arabic/articles/c6pekpl2kywo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 19,
          "url": "https://www.bbc.com/arabic/articles/crgp4qg4qqeo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 20,
          "url": "https://www.bbc.com/arabic/articles/czr21dz8nv8o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 21,
          "url": "https://www.bbc.com/arabic/articles/cjmppm4ezrpo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 22,
          "url": "https://www.bbc.com/arabic/articles/cjqpn151q7go",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 23,
          "url": "https://www.bbc.com/news/articles/cy021zgll03o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 24,
          "url": "https://www.bbc.com/arabic/articles/c04032r14pzo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 25,
          "url": "https://www.bbc.com/arabic/articles/c3gk9l9y5w3o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 26,
          "url": "https://www.bbc.com/arabic/articles/c2emp4gmld2o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 27,
          "url": "https://www.bbc.com/arabic/articles/c6p12j7n0jdo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 28,
          "url": "https://www.bbc.com/arabic/articles/cd1d35y9k7ko",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 29,
          "url": "https://www.bbc.com/arabic/articles/cn053v3kj4zo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 30,
          "url": "https://www.bbc.com/arabic/articles/cmljdnlxp1zo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 31,
          "url": "https://www.bbc.com/arabic/articles/cn04w4rq7lro",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 32,
          "url": "https://www.bbc.com/arabic/articles/cv2lzy89jr4o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 33,
          "url": "https://www.bbc.com/arabic/articles/c4nj5qwpw5qo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 34,
          "url": "https://www.bbc.com/arabic/articles/c842zzxe34go",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 35,
          "url": "https://www.bbc.com/arabic/articles/ckv47w2w5w8o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 36,
          "url": "https://www.bbc.com/arabic/articles/cgl6vdrx023o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 37,
          "url": "https://www.bbc.com/arabic/articles/cn04r432gv1o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 38,
          "url": "https://www.bbc.com/arabic/articles/cj538evydn7o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 39,
          "url": "https://www.bbc.com/arabic/articles/cl50y81xz4qo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 40,
          "url": "https://www.bbc.com/arabic/articles/crgvyj54mrro",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 41,
          "url": "https://www.bbc.com/arabic/articles/c2xjmvpndkyo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 42,
          "url": "https://www.bbc.com/arabic/articles/cj7gd994v71o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 43,
          "url": "https://www.bbc.com/arabic/articles/cll7ll9l68no",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 44,
          "url": "https://www.bbc.com/arabic/articles/cv2m2684j5zo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 45,
          "url": "https://www.bbc.com/arabic/articles/cg3kg4wn072o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 46,
          "url": "https://www.bbc.com/arabic/articles/c06mjpdzjzmo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 47,
          "url": "https://www.bbc.com/arabic/articles/c2jyx37yj07o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 48,
          "url": "https://www.bbc.com/arabic/articles/c4nyy1qxz97o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 49,
          "url": "https://www.bbc.com/arabic/articles/cl5l49nwv4wo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 50,
          "url": "https://www.bbc.com/arabic/articles/cz9m1r8z7qpo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 51,
          "url": "https://www.bbc.com/arabic/articles/c04reym9zygo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 52,
          "url": "https://www.bbc.com/arabic/articles/c28ye7kjej9o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 53,
          "url": "https://www.bbc.com/arabic/67686049",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 54,
          "url": "https://www.bbc.com/arabic/tv-and-radio-67686046",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 55,
          "url": "https://www.bbc.com/arabic/67686043",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 56,
          "url": "https://www.bbc.com/arabic/tv-and-radio-67686179",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 57,
          "url": "https://www.bbc.com/arabic/tv-and-radio-66989108",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 58,
          "url": "https://www.bbc.com/arabic/tv-and-radio-67685807",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 59,
          "url": "https://www.bbc.com/arabic/articles/cgl4x42jx7po",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 60,
          "url": "https://www.bbc.com/arabic/articles/ce5jlyzel61o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 61,
          "url": "https://www.bbc.com/arabic/articles/c2jyyg7re2eo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 62,
          "url": "https://www.bbc.com/arabic/articles/cyr32k4ykj1o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 63,
          "url": "https://www.bbc.com/arabic/articles/c28lkjxkjp8o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 64,
          "url": "https://www.bbc.com/arabic/articles/c3g43284epmo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 65,
          "url": "https://www.bbc.com/arabic/articles/ce95d1pepzro",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 66,
          "url": "https://www.bbc.com/arabic/articles/cmljlrw0dn1o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 67,
          "url": "https://www.bbc.com/arabic/interactivity-67693215",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 68,
          "url": "https://www.bbc.com/arabic/interactivity-67683225",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 69,
          "url": "https://www.bbc.com/arabic/interactivity-67631289",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 70,
          "url": "https://www.bbc.com/arabic/media-49522519",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 71,
          "url": "https://www.bbc.com/arabic/articles/cpwpnlqndweo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 72,
          "url": "https://www.bbc.com/arabic/articles/c1674d4xj8zo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 73,
          "url": "https://www.bbc.com/arabic/art-and-culture-65140458",
        },
      ],
      "name": "BBC News عربي",
      "numberOfItems": 73,
    },
  ],
}
`;

exports[`AMP Home Page SEO OG description 1`] = `"بي بي سي العربية هي شبكة لنقل الأخبار والمعلومات ومقاطع الفيديو إلى العالم عبر عدة وسائط، تشمل الإنترنت ومواقع التواصل الاجتماعي والراديو والتلفزيون والهواتف المحمولة."`;

exports[`AMP Home Page SEO OG image 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/arabic.png"`;

exports[`AMP Home Page SEO OG image alt 1`] = `"BBC News عربي"`;

exports[`AMP Home Page SEO OG locale 1`] = `"ar"`;

exports[`AMP Home Page SEO OG site name 1`] = `"BBC News عربي"`;

exports[`AMP Home Page SEO OG title 1`] = `"الرئيسية - BBC News عربي"`;

exports[`AMP Home Page SEO OG type 1`] = `"website"`;

exports[`AMP Home Page SEO OG url 1`] = `"http://localhost:7080/arabic"`;

exports[`AMP Home Page SEO Page title 1`] = `"الرئيسية - BBC News عربي"`;

exports[`AMP Home Page SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`AMP Home Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`AMP Home Page SEO Twitter creator 1`] = `"@BBCArabic"`;

exports[`AMP Home Page SEO Twitter description 1`] = `"بي بي سي العربية هي شبكة لنقل الأخبار والمعلومات ومقاطع الفيديو إلى العالم عبر عدة وسائط، تشمل الإنترنت ومواقع التواصل الاجتماعي والراديو والتلفزيون والهواتف المحمولة."`;

exports[`AMP Home Page SEO Twitter image alt 1`] = `"BBC News عربي"`;

exports[`AMP Home Page SEO Twitter image src 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/arabic.png"`;

exports[`AMP Home Page SEO Twitter site 1`] = `"@BBCArabic"`;

exports[`AMP Home Page SEO Twitter title 1`] = `"الرئيسية - BBC News عربي"`;

exports[`AMP Home Page Timestamp should match text and date 1`] = `
{
  "date": "2023-12-12",
  "text": "12 ديسمبر/ كانون الأول 2023",
}
`;

exports[`AMP Home Page messageBanner has a link 1`] = `"https://www.bbc.com/arabic/media-49522519"`;
